--- a/WebContent/styles/main.css
+++ b/WebContent/styles/main.css
@@ -22,7 +22,7 @@ ul {
 .top-header {
   position:    fixed;
   align-items: center;
-  background:  #DF574B;
+  background:  #f26454;
   box-shadow:  0px 2px 10px #333333;
   display:     flex;
   height:      60px;
@@ -58,24 +58,24 @@ ul {
  */
 .container > header {
   align-items:     center;
-  background:      url('https://cdn.sedo.com/fileadmin/user_upload/About_Sedo/Events/Event_Hero_3040x1256_03.jpg') no-repeat 50% 50%;
+  background:      url('https://www.fotobeginner.com/wp-content/uploads/2016/08/sample3-748x499.jpg') no-repeat 60%;
   background-size: 100%;
   display:         flex;
-  height:          250px;
+  height:          220px;
 }
 
 .container > header p {
-  border-left:  1px solid #ffac7c;
-  color: #FBAF41;
+  color: #fff;
+  text-shadow: 1px #fff;
   font-weight:  400;
   font-size:    2em;
   line-height:  1em;
-  margin-left:  220px;
+  margin-left:  120px;
   padding-left: 5px;
 }
 
 .container > header span {
-  color: #ffac7c;
+  color: #fdfaf5;
 }
 
 /**
